tests/type-errors/effect_method_asset_addupdate_aggregate.arl
archetype effect_method_asset_add_update_aggregate

asset o_asset identified by oid {
  oid : int;
  v : int;
}

asset my_asset identified by id {
  id     : string;
  col    : aggregate<o_asset>;
} initialized by {
  {"id0"; []};
  {"id1"; []};
  {"id2"; []}
}

variable res : int = 0

entry exec () {
  effect {
    my_asset["id0"].col.add_update(0, {v = 2})
  }
}
